fix tag spacing

--- a/packages/portal/src/assets/scss/texts.scss
+++ b/packages/portal/src/assets/scss/texts.scss
@@ -13,7 +13,7 @@ header .col {
 
 .related-container {
   margin-top: 0.625rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.75rem;
 
   ~ .related-container {
     margin-top: 0;
